--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -6,12 +6,13 @@
     <title>Recetario</title>
     <link rel="icon" href="./favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=McLaren|Raleway|Source+Sans+Pro:200,200i,300,400&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="page">
       <partial src="_header.html" label="Header"></partial>
       <partial src="_main.html" label="Main"></partial>
-      <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
+      <partial src="_footer.html" label="Footer"></partial>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
