--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,15 @@
-<header class="page__header">HOLA</header>
+<header class="page__header">
+  <h3 class="header__subtitle">
+    INGREDIENTES
+  </h3>
+  <h1 class="header__title">Nombre del plato</h1>
+  <div class="header__selectors">
+    <a href="" class="header__select--link">
+      <p class="header__select">Seleccionar todo &nbsp|</p>
+    </a>
+
+    <a href="" class="header__deselect--link">
+      <p class="header__deselect">Deseleccionar todo</p>
+    </a>
+  </div>
+</header>
