--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,44 @@
-<main class="page__main">Hola</main>
+<main class="page__main">
+  <table class="table">
+    <tbody>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="first_input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__articule--first--description">
+            <h2 class="main__articule--first--description--title">Artículo</h2>
+            <h3 class="main__articule--first--description--brand">Marca</h3>
+            <h4 class="main__articule--first--description--weight">X kg.</h4>
+          </div>
+        </td>
+        <td><div class="main__articule--first--description--price">X,XX €</div></td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox2" value="second_checkbox" /></th>
+        <td><input class="second_input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__articule--second--description">
+            <h2 class="main__articule--second--description--title">Artículo</h2>
+            <h3 class="main__articule--second--description--brand">Marca</h3>
+            <h4 class="main__articule--second--description--weight">X kg.</h4>
+          </div>
+        </td>
+        <td><div class="main__articule--second--description--price">X,XX €</div></td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox3" value="third_checkbox" /></th>
+        <td><input class="third_input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__articule--third--description">
+            <h2 class="main__articule--third--description--title">Artículo</h2>
+            <h3 class="main__articule--third--description--brand">Marca</h3>
+            <h4 class="main__articule--third--description--weight">X kg.</h4>
+          </div>
+        </td>
+        <td>
+          <div class="main__articule--third--description--price">X,XX €</div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</main>
