--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,2 +1,115 @@
 @import "core/variables";
 @import "core/links";
+
+.header {
+  &__subtitle {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 400;
+    color: rgb(150, 148, 148);
+    margin-bottom: 0;
+    font-size: 14px;
+  }
+  &__title {
+    font-family: "McLaren", cursive;
+    margin: 0px;
+  }
+  &__selectors {
+    display: flex;
+    flex-direction: row;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 12px;
+  }
+  &__select {
+    margin-right: 4px;
+    color: #6bb3e0;
+    &--link {
+      text-decoration: none;
+    }
+  }
+  &__deselect {
+    color: #6bb3e0;
+    &--link {
+      text-decoration: none;
+    }
+  }
+}
+.table {
+  height: 200px;
+  width: 320px;
+  border-top: 0.2px solid #6bb3e0;
+}
+
+th,
+td {
+  border-bottom: 1px solid #ddd;
+}
+
+.first_input,
+.second_input,
+.third_input {
+  height: 40px;
+  width: 40px;
+}
+
+h2 {
+  font-family: "McLaren", cursive;
+  font-size: 16px;
+  margin: 0;
+}
+h3 {
+  color: rgb(150, 148, 148);
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
+  margin: 0;
+}
+
+h4 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  margin: 0;
+}
+
+.main__articule-- {
+  &first--description--price,
+  &second--description--price,
+  &third--description--price {
+    color: #4dd163;
+    font-family: "McLaren", cursive;
+    font-size: 16px;
+  }
+}
+
+.btn {
+  background-color: #4dd163;
+  color: #ffffff;
+  font-family: "McLaren", cursive;
+  font-size: 14px;
+  padding: 5px;
+  width: 200px;
+}
+
+.page__footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 320px;
+}
+
+.page__footer p,
+.page__footer span {
+  font-family: "McLaren", cursive;
+}
+
+.footer__table {
+  border-top: none;
+}
+
+.footer__table p {
+  font-size: 14px;
+}
+
+.footer__table td {
+  width: 200px;
+}
