--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -2,7 +2,7 @@
   <h3 class="header__subtitle">
     INGREDIENTES
   </h3>
-  <h1 class="header__title">Nombre del plato</h1>
+  <h1 class="header__title"></h1>
   <div class="header__selectors">
     <a href="" class="header__select--link">
       <p class="header__select">Seleccionar todo &nbsp|</p>
