--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -5,13 +5,13 @@
         <th scope="row"></th>
         <td><h3 class="footer__items--text">Items:</h3></td>
         <td></td>
-        <td><p class="footer__items--number">1</p></td>
+        <td class="table__final--row"><p class="footer__items--number">1</p></td>
       </tr>
       <tr>
         <th scope="row"></th>
         <td><h3 class="footer__subtotal--text">Subtotal</h3></td>
         <td></td>
-        <td>
+        <td class="table__final--row">
           <p class="footer__subtotal--number">2,95 <span class="footer__subtotal--number--span">€</span></p>
         </td>
       </tr>
@@ -19,7 +19,7 @@
         <th scope="row"></th>
         <td><h3 class="footer__shippingcosts--text">Gastos de envío</h3></td>
         <td></td>
-        <td>
+        <td class="table__final--row">
           <p class="footer__shippingcosts--number">7,00 <span class="footer__subtotal--shippingcosts--span">€</span></p>
         </td>
       </tr>
