--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -12,7 +12,7 @@
         <td><h3 class="footer__subtotal--text">Subtotal</h3></td>
         <td></td>
         <td class="table__final--row">
-          <p class="footer__subtotal--number">2,95 <span class="footer__subtotal--number--span">€</span></p>
+          <p class="footer__subtotal--number">2,95 <span class="footer__subtotal--number--span"></span></p>
         </td>
       </tr>
       <tr>
@@ -20,19 +20,22 @@
         <td><h3 class="footer__shippingcosts--text">Gastos de envío</h3></td>
         <td></td>
         <td class="table__final--row">
-          <p class="footer__shippingcosts--number">7,00 <span class="footer__subtotal--shippingcosts--span">€</span></p>
+          <p class="footer__shippingcosts--number">7,00 <span class="footer__subtotal--shippingcosts--span"></span></p>
         </td>
       </tr>
       <tr>
         <th scope="row"></th>
-        <td><h2 class="footer__total--text">Total</h2></td>
+        <td><h4 class="footer__total--text">Total</h4></td>
         <td></td>
         <td>
-          <p class="footer__total--number">9,95 <span class="footer__total--number--span">€</span></p>
+          <p class="footer__total--number">9,95 <span class="footer__total--number--span"></span></p>
         </td>
       </tr>
     </tbody>
   </table>
 
-  <button type="button" class="btn">Comprar ingredientes: <span class="footer__btn--span"> 9,95</span> €</button>
+  <button type="button" class="btn">
+    Comprar ingredientes:
+    <p class="footer__btn--span">9,95 €</p>
+  </button>
 </footer>
