--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -3,41 +3,89 @@
     <tbody>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="first_input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
         <td>
-          <div class="main__articule--first--description">
-            <h2 class="main__articule--first--description--title">Artículo</h2>
-            <h3 class="main__articule--first--description--brand">Marca</h3>
-            <h4 class="main__articule--first--description--weight">X kg.</h4>
+          <div class="main__article--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
           </div>
         </td>
-        <td><div class="main__articule--first--description--price">X,XX €</div></td>
+        <td><div class="main__articule--description--price"></div></td>
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox2" value="second_checkbox" /></th>
-        <td><input class="second_input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
         <td>
-          <div class="main__articule--second--description">
-            <h2 class="main__articule--second--description--title">Artículo</h2>
-            <h3 class="main__articule--second--description--brand">Marca</h3>
-            <h4 class="main__articule--second--description--weight">X kg.</h4>
+          <div class="main__article--second--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
           </div>
         </td>
-        <td><div class="main__articule--second--description--price">X,XX €</div></td>
+        <td><div class="main__articule--description--price"></div></td>
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox3" value="third_checkbox" /></th>
-        <td><input class="third_input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
         <td>
-          <div class="main__articule--third--description">
-            <h2 class="main__articule--third--description--title">Artículo</h2>
-            <h3 class="main__articule--third--description--brand">Marca</h3>
-            <h4 class="main__articule--third--description--weight">X kg.</h4>
+          <div class="main__article--third--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
           </div>
         </td>
         <td>
-          <div class="main__articule--third--description--price">X,XX €</div>
+          <div class="main__articule--description--price"></div>
         </td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__articule--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td><div class="main__articule--description--price"></div></td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__article--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td><div class="main__articule--description--price"></div></td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__article--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td><div class="main__articule--description--price"></div></td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__articule--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td><div class="main__articule--description--price"></div></td>
       </tr>
     </tbody>
   </table>
