--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -11,11 +11,16 @@
             <h4 class="main__article--description--weight"></h4>
           </div>
         </td>
-        <td><div class="main__articule--description--price"></div></td>
+        <td>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
+          </div>
+        </td>
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox2" value="second_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" value="text" type="text" id="name" name="name" /></td>
         <td>
           <div class="main__article--second--description">
             <h2 class="main__article--description--title"></h2>
@@ -23,11 +28,16 @@
             <h4 class="main__article--description--weight"></h4>
           </div>
         </td>
-        <td><div class="main__articule--description--price"></div></td>
+        <td>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
+          </div>
+        </td>
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox3" value="third_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" value="text" type="text" id="name" name="name" /></td>
         <td>
           <div class="main__article--third--description">
             <h2 class="main__article--description--title"></h2>
@@ -36,7 +46,61 @@
           </div>
         </td>
         <td>
-          <div class="main__articule--description--price"></div>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" value="text" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__articule--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__article--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
+        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td>
+          <div class="main__article--first--description">
+            <h2 class="main__article--description--title"></h2>
+            <h3 class="main__article--description--brand"></h3>
+            <h4 class="main__article--description--weight"></h4>
+          </div>
+        </td>
+        <td>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
+          </div>
         </td>
       </tr>
       <tr>
@@ -49,43 +113,12 @@
             <h4 class="main__article--description--weight"></h4>
           </div>
         </td>
-        <td><div class="main__articule--description--price"></div></td>
-      </tr>
-      <tr>
-        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
         <td>
-          <div class="main__article--first--description">
-            <h2 class="main__article--description--title"></h2>
-            <h3 class="main__article--description--brand"></h3>
-            <h4 class="main__article--description--weight"></h4>
+          <div class="main__articule--price--container">
+            <div class="main__articule--description--price"></div>
+            <span class="main__article--currency"></span>
           </div>
         </td>
-        <td><div class="main__articule--description--price"></div></td>
-      </tr>
-      <tr>
-        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
-        <td>
-          <div class="main__article--first--description">
-            <h2 class="main__article--description--title"></h2>
-            <h3 class="main__article--description--brand"></h3>
-            <h4 class="main__article--description--weight"></h4>
-          </div>
-        </td>
-        <td><div class="main__articule--description--price"></div></td>
-      </tr>
-      <tr>
-        <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
-        <td>
-          <div class="main__articule--first--description">
-            <h2 class="main__article--description--title"></h2>
-            <h3 class="main__article--description--brand"></h3>
-            <h4 class="main__article--description--weight"></h4>
-          </div>
-        </td>
-        <td><div class="main__articule--description--price"></div></td>
       </tr>
     </tbody>
   </table>
