--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Recetario</title>
+    <title>Recipe Book</title>
     <link rel="icon" href="./favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=McLaren|Raleway|Source+Sans+Pro:200,200i,300,400&display=swap" rel="stylesheet" />
