--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -3,7 +3,7 @@
     <tbody>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__article--first--description">
             <h2 class="main__article--description--title"></h2>
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox2" value="second_checkbox" /></th>
-        <td><input class="items__input" value="text" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__article--second--description">
             <h2 class="main__article--description--title"></h2>
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox3" value="third_checkbox" /></th>
-        <td><input class="items__input" value="text" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__article--third--description">
             <h2 class="main__article--description--title"></h2>
@@ -54,7 +54,7 @@
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" value="text" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__articule--first--description">
             <h2 class="main__article--description--title"></h2>
@@ -71,7 +71,7 @@
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__article--first--description">
             <h2 class="main__article--description--title"></h2>
@@ -88,7 +88,7 @@
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__article--first--description">
             <h2 class="main__article--description--title"></h2>
@@ -105,7 +105,7 @@
       </tr>
       <tr>
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
-        <td><input class="items__input" type="text" id="name" name="name" /></td>
+        <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
           <div class="main__articule--first--description">
             <h2 class="main__article--description--title"></h2>
