fetch from local api

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -14,6 +14,6 @@
       <partial src="_main.html" label="Main"></partial>
       <partial src="_footer.html" label="Footer"></partial>
     </div>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js" type="module"></script>
   </body>
 </html>
