sum total and subtotal

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -23,12 +23,14 @@
   <div class="footer__total">
     <h4 class="footer__total--text">Total</h4>
     <div class="footer__total--number--div">
-      <p class="footer__total--number">9,95 <span class="footer__total--number--span"></span></p>
+      <p class="footer__total--number">9,95</p>
+      <span class="footer__total--number--span"></span>
     </div>
   </div>
 
   <button type="button" class="btn">
     Comprar ingredientes:
-    <p class="footer__btn--span">9,95 €</p>
+    <p class="footer__btn--span">9,95</p>
+    <span class="footer__btn--number--span"></span>
   </button>
 </footer>
