--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,7 +1,7 @@
 <main class="page__main">
   <table class="table">
     <tbody>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
@@ -18,7 +18,7 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox2" value="second_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
@@ -35,7 +35,7 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox3" value="third_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
@@ -52,7 +52,7 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
@@ -69,7 +69,7 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
@@ -86,7 +86,7 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
@@ -103,7 +103,7 @@
           </div>
         </td>
       </tr>
-      <tr>
+      <tr class="my_row">
         <th scope="row"><input type="checkbox" id="cbox1" value="first_checkbox" /></th>
         <td><input class="items__input" type="number" id="name" name="name" /></td>
         <td>
